# shock2quest

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md
.cargo/: config.toml
.github/workflows/: build-android.yml  build.yml  format.yml
.shodan/: shodan.toml  system_prompt.md
.shodan/prompts/: check-pr-state.md  improve-documentation.md  iterate-on-todo-list.md
dark/: Cargo.toml
dark/src/: font.rs  glb_model.rs  glb_skeleton.rs  lib.rs  model.rs  name_map.rs  ss2_bin_ai_loader.rs  ss2_bin_header.rs  ss2_bin_obj_loader.rs  ss2_cal_loader.rs  ss2_chunk_file_reader.rs  ss2_common.rs  ss2_entity_info.rs  ss2_skeleton.rs  tag_database.rs
dark/src/audio/: song.rs  song_player.rs
dark/src/gamesys/: env_map.rs  env_sound_query.rs  gamesys.rs  sound_schema.rs  speech_db.rs
dark/src/importers/: audio_importer.rs  bitmap_animation_importer.rs  glb_animation_importer.rs  glb_model_importer.rs  map_position_importer.rs  mod.rs  strings_importer.rs
dark/src/map/: mod.rs
dark/src/mission/: bsp_tree.rs  cell.rs  cell_portal.rs  mod.rs  path_database.rs  plane.rs  render_params.rs  room.rs  room_database.rs  scene_builder.rs  song_params.rs  texture_list.rs
dark/src/motion/: animation_clip.rs  animation_player.rs  glb_animation.rs  mod.rs  motion_clip.rs  motion_schema.rs
dark/src/properties/: accumulator.rs  mod.rs  prop_ai.rs  prop_ai_alert_cap.rs  prop_ai_alertness.rs  prop_ai_aware_delay.rs  prop_ai_camera.rs  prop_ai_device.rs  prop_ai_mode.rs  prop_ambient_hacked.rs  prop_anim_tex.rs  prop_creature_pose.rs  prop_frob_info.rs  prop_key.rs  prop_particles.rs  prop_phys_initial_velocity.rs  prop_phys_type.rs  prop_replicator.rs  prop_service.rs  prop_trip_flags.rs  prop_tweq.rs  prop_voice.rs
dark/src/util/: mod.rs
engine/: Cargo.toml
engine/src/: engine.rs  font.rs  gl_engine.rs  lib.rs  macros.rs  shader.rs  texture.rs  texture_atlas.rs  texture_descriptor.rs  texture_format.rs
engine/src/assets/: asset_cache.rs  asset_importer.rs  asset_paths.rs  bundle_asset_path.rs  mod.rs  text_importer.rs
engine/src/audio/: mod.rs  output.rs
engine/src/file_system/: android_file_system.rs  default_file_system.rs  file_system.rs  storage.rs
engine/src/importers/: fbx_importer.rs
engine/src/logging/: config.rs  macros.rs  mod.rs
engine/src/materials/: lightmap_material.rs  screen_space_material.rs
engine/src/scene/: basic_material.rs  billboard_material.rs  clipped_screen_material.rs  color_material.rs  cube.rs  cube_indexed.rs  debug_normal_material.rs  indexed_mesh.rs  light.rs  light_system.rs  lines_mesh.rs  material.rs  mesh.rs  mod.rs  particles.rs  plane.rs  quad.rs  quad_unit.rs  renderable.rs  scene.rs  scene_object.rs  skinned_material.rs  ui_2d_renderer.rs  vertex.rs
engine_ffmpeg/: Cargo.toml
engine_ffmpeg/src/: audio_player.rs  video_player.rs
projects/: ai-generalize-alertness.md  ai-pathfinding.md  ai_improvements.md  animated-glb.md  camera.md  cli-inspect-tool.md  climbing.md  debug-runtime.md  debug_runtime.md  entity-parsing-query-tool.md  entity-query-cli-tool.md  ffmpeg-anr-fix.md  fix-station.md  improved-logging.md  keybinding-system.md  melee-combat.md  mission-core-refactoring-proposal.md  mission.md  multi-pass-lighting.md  player-damage.md  player-death.md  psi-powers.md  ragdoll-failed-attempt-1.md  ragdoll.md  shodan-cli-tool.md  speech.md  teleport.md
projects/speech/: speech-1.md  speech-2.md  speech-3.md  speech-4.md  speech-5.md  speech-6.md  speech-7.md
references/: entities.md
runtimes/debug_runtime/: Cargo.toml
runtimes/debug_runtime/src/: commands.rs  main.rs
runtimes/desktop_runtime/: Cargo.toml
runtimes/desktop_runtime/src/: main.rs
runtimes/oculus_runtime/: Cargo.toml  build.rs  set_up_android_sdk.sh
runtimes/oculus_runtime/src/: android_permissions.rs  lib.rs
runtimes/tool/: Cargo.toml
runtimes/tool/src/: main.rs
shock2vr/: Cargo.toml
shock2vr/src/: game_scene.rs  lib.rs  map_renderer.rs  paths.rs  runtime_props.rs  util.rs  virtual_hand.rs  vr_config.rs
shock2vr/src/command/: mod.rs  move_inventory_command.rs  spawn_item_command.rs
shock2vr/src/creature/: creature_definitions.rs  hit_box_script.rs  hit_boxes.rs  mod.rs  rag_doll.rs
shock2vr/src/gui/: gui_component.rs  gui_manager.rs  gui_script.rs  proxy_gui_script.rs
shock2vr/src/hud/: item_outline.rs  mod.rs  virtual_arms.rs
shock2vr/src/inventory/: player_inventory_entity.rs
shock2vr/src/mission/: entity_creator.rs  mission_core.rs  mission_manager.rs  mission_trait.rs  mod.rs  (+3 more)
tools/dark_query/: Cargo.toml
tools/dark_query/src/: data_loader.rs  entity_analyzer.rs  main.rs  motion_analyzer.rs  speech_analyzer.rs
tools/dark_viewer/: Cargo.toml
tools/dark_viewer/src/: main.rs
tools/dark_viewer/src/scenes/: bin_ai_viewer.rs  bin_obj_viewer.rs  customizable_bones.rs  font_viewer.rs  glb_animated_viewer.rs  glb_viewer.rs  mod.rs  render_helpers.rs  video_player.rs
tools/debug_command/: Cargo.toml
tools/debug_command/src/: main.rs
tools/shodan/: Cargo.toml  shodan.toml
tools/shodan/prompts/: check-pr-state.md  fix-todos.md  iterate-on-issues.md  iterate-on-projects.md  optimize-performance.md
tools/shodan/src/: agent.rs  claude_code.rs  codex.rs  config.rs  error.rs  git.rs  github.rs  lib.rs  main.rs  orchestrator.rs  prompts.rs
(+121 files in other folders)
