
[profile.dev.package.rapier3d]
opt-level = 3

[workspace]
resolver = "2"

members = [
    "runtimes/*",
    "engine",
    "engine_ffmpeg",
    "shock2vr",
    "dark",
    "tools/shodan",
    "tools/dark_viewer",
    "tools/dark_query",
    "tools/debug_command",
]

[workspace.lints.rust]
# Suppress non-local-definitions warning caused by num_derive macros (FromPrimitive/ToPrimitive)
# This is a known issue with the num_derive crate and is safe to suppress
# See: https://github.com/rust-num/num-derive/issues
non_local_definitions = "allow"
