[package]
name = "debug_command"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "debug_command"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI and HTTP client
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Output formatting
colored = "2.0"

# Error handling and utilities
anyhow = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }