[package]
name = "shodan"
version = "0.1.0"
edition = "2024"

[lints.rust]
# Shodan is a development tool with many experimental features that may not be used yet
dead_code = "allow"
# Suppress non-local-definitions warning caused by num_derive macros (FromPrimitive/ToPrimitive)
non_local_definitions = "allow"

[[bin]]
name = "shodan"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
# reqwest = { version = "0.11.20", features = ["json"] }  # Commented out due to rustc version conflicts
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
serde_yaml = "0.9"
async-trait = "0.1"
